# lancedb-duckdb-demo

./: .gitignore  README.md  create_duckdb.py  create_lancedb.py  image_search.py  pyproject.toml  text_search.py
