[project]
name = "lance-duckdb-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.1",
    "lancedb>=0.30.1",
    "pillow>=12.1.1",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "pylance>=4.0.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.1.1",
    "torch>=2.11.0",
    "transformers>=5.4.0"
]
